* Added round summary table * Review author anonymised * Removed unnecessary information from stats table * Styling changes in review table * Styling changes for Round Selector button * New 'All Rounds' button added as default round choice * Submission details changed to be visible by default * Styling fixes for toggle question list checkbox

--- a/src/pages/ViewTeamGrades/grades.scss
+++ b/src/pages/ViewTeamGrades/grades.scss
@@ -190,40 +190,35 @@
   font-weight: bold !important;
 }
 
-/* Styles for the round selector */
+
 .round-selector {
   display: flex;
+  gap: 8px; /* Adjust spacing between buttons */
 }
 
 .round-button {
-  padding: 7px 7px;
-  margin: 8px;
-  margin-left: 0;
-  border: 2px solid #4a90e2;
-  border-radius: 10px;
-  background-color: #4a90e2;
-  color: white;
-  font-size: 12px;
+  padding: 10px 20px;
+  margin: 8px; /* Adjusts margin to remove left margin */
+  border: 2px solid #b00404; /* Red border */
+  border-radius: 2px; /* Slightly less rounded corners */
+  background-color: transparent; /* Transparent background for unselected button */
+  color: #b00404; /* Red text for unselected button */
+  font-size: 14px;  
   font-weight: bold;
   cursor: pointer;
-  transition: all 0.3s ease;
+  transition: background-color 0.3s ease, color 0.3s ease;
 
   &:hover {
-    background-color: #357bd8;
-    border-color: #357bd8;
+    background-color: rgba(176, 4, 4, 0.1); /* Light red background on hover */
   }
-
-  &.current {
-    background-color: #2ecc71;
-    border-color: #2ecc71;
-  }
-
-  .round-selector > div {
-    display: flex;
-    align-items: center;
-    margin: auto;
-  }
+  
 }
+
+.round-button.current {
+  background-color: rgb(176, 4, 4); /* Solid red background for selected button */
+  color: white; /* White text for selected button */
+}
+
 
 .container {
   display: flex;
@@ -293,4 +288,20 @@
 
 .review-container {
   margin-bottom: 200px; 
+}
+
+
+.toggle-container {
+  margin-left: auto;
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
+}
+
+
+// Styling the checkbox if needed
+.toggle-container input[type="checkbox"] {
+  margin: 0;
+  padding: 0;
+  // Reset any unwanted inherited styles
 }
